--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 spring.sql.init.platform=h2
 spring.datasource.driver-class-name=org.h2.Driver
 # Cria o arquivo C:\Users\<NOME_USUARIO>\filmesbd23.mv
-spring.datasource.url=jdbc:h2:file:~/filmesbd23
+spring.datasource.url=jdbc:h2:file:./filmesbd23
 spring.datasource.username=sa
 
 spring.jpa.show-sql=true
